move aws credentials to config file

--- a/NfcConnect/App.config
+++ b/NfcConnect/App.config
@@ -9,6 +9,7 @@
   </startup>
   <appSettings>
     <add key="configurationFile" value="config.xml" />
+    <add key="AWSConfigurationFile" value="AWSConfig.xml" />
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
