--- a/NfcConnect/NfcConnect.csproj
+++ b/NfcConnect/NfcConnect.csproj
@@ -107,6 +107,7 @@
     <Compile Include="Main.Designer.cs">
       <DependentUpon>Main.cs</DependentUpon>
     </Compile>
+    <Compile Include="External\NFCReader.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Main.resx">
